formate the porjects and fix some issues