@@ -4,12 +4,9 @@ import jakarta.persistence.*;
 import org.bshg.librarysystem.utils.entity.audit.AuditEntity;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.time.LocalDateTime;
-import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
-import org.bshg.librarysystem.utils.entity.audit.AuditEntity;
 
 @Entity
 @Table(name = "users")
@@ -58,12 +55,12 @@ public class User extends AuditEntity implements UserDetails {
     @Override
     public List<Authority> getAuthorities() {
         return roles.stream().flatMap(role -> {
-                List<Authority> authorities1 = new ArrayList<>();
-                authorities1.add(new Authority(role.getName()));
-                authorities1.addAll(role.getPermissions().stream().map(permission -> new Authority(permission.getName())).toList());
-                return authorities1.stream();
-            })
-            .collect(Collectors.toList());
+                    List<Authority> authorities1 = new ArrayList<>();
+                    authorities1.add(new Authority(role.getName()));
+                    authorities1.addAll(role.getPermissions().stream().map(permission -> new Authority(permission.getName())).toList());
+                    return authorities1.stream();
+                })
+                .collect(Collectors.toList());
     }
 
     @Override
